--- a/about/index.html
+++ b/about/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Pages Site</title>
+    <title>My Pages Site- About</title>
     
 </head>
 <body>
     <nav>
-        <a href="./about">About Page</a>
+        <a href="..">Back Home</a>
     </nav>
-    <h1>Hello, Mom</h1>
+    <h1>About Page</h1>
 </body>
 </html>
