--- a/about/index.html
+++ b/about/index.html
@@ -1,15 +1,12 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Pages Site- About</title>
-    
-</head>
-<body>
-    <nav>
-        <a href="..">Back Home</a>
-    </nav>
-    <h1>About Page</h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>About</title>
+  </head>
+  <body>
+    About
+  </body>
 </html>
